added pg to production

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,35 +1,2 @@
- <p id="notice"><%= notice %></p>
-
-<h1>Empolyees</h1>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Age</th>
-      <th>Gender</th>
-      <th>Designation</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @empolyees.each do |empolyee| %>
-      <tr>
-        <td><%= empolyee.first_name %></td>
-        <td><%= empolyee.last_name %></td>
-        <td><%= empolyee.age %></td>
-        <td><%= empolyee.Gender %></td>
-        <td><%= empolyee.designation %></td>
-        <td><%= link_to 'Show', empolyee %></td>
-        <td><%= link_to 'Edit', edit_empolyee_path(empolyee) %></td>
-        <td><%= link_to 'Destroy', empolyee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Empolyee', new_empolyee_path %>
+<h1>Hello World</h1>
+this is my first rails webpage....
